--- a/tests/husky_controller_interface.ipynb
+++ b/tests/husky_controller_interface.ipynb
@@ -10,14 +10,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[93m[WARNING] [14:49:47.016520] - No global configuration provided. Using default system configuration.\u001b[0m\n",
-      "\u001b[96m[INFO] [14:49:47.020202] - Service: Successfully registered '__DEFAULT_SERVICE/GetInfo/HuskyJointController_f1360507-ae87-4169-867a-fb65344d1860' with registry.\u001b[0m\n",
-      "\u001b[96m[INFO] [14:49:47.022390] - Service: Successfully registered '__DEFAULT_SERVICE/SuspendNode/HuskyJointController_f1360507-ae87-4169-867a-fb65344d1860' with registry.\u001b[0m\n",
-      "\u001b[96m[INFO] [14:49:47.024116] - Service: Successfully registered '__DEFAULT_SERVICE/RestartNode/HuskyJointController_f1360507-ae87-4169-867a-fb65344d1860' with registry.\u001b[0m\n",
-      "\u001b[91m[ERROR] [14:49:47.024752] - Couldn't load config for other 'HuskyJointController'\u001b[0m\n",
-      "\u001b[92m\u001b[1m[OK] [14:49:47.025866] - setup publisher Husky/joint_group_command/sim[joint_group_command_t]\u001b[0m\n",
-      "\u001b[92m\u001b[1m[OK] [14:49:47.027392] - setup publisher Husky/cartesian_command/sim[task_space_command_t]\u001b[0m\n",
-      "\u001b[92m\u001b[1m[OK] [14:49:47.028736] - subscribed to Husky/joint_states/sim[joint_state_t]\u001b[0m\n"
+      "\u001b[93m[WARNING] [17:34:33.676688] - No global configuration provided. Using default system configuration.\u001b[0m\n",
+      "\u001b[96m[INFO] [17:34:33.680455] - Service: Successfully registered '__DEFAULT_SERVICE/GetInfo/HuskyJointController_1b928dbb-f466-4144-8311-de5ad07d1970' with registry.\u001b[0m\n",
+      "\u001b[96m[INFO] [17:34:33.683302] - Service: Successfully registered '__DEFAULT_SERVICE/SuspendNode/HuskyJointController_1b928dbb-f466-4144-8311-de5ad07d1970' with registry.\u001b[0m\n",
+      "\u001b[96m[INFO] [17:34:33.687021] - Service: Successfully registered '__DEFAULT_SERVICE/RestartNode/HuskyJointController_1b928dbb-f466-4144-8311-de5ad07d1970' with registry.\u001b[0m\n",
+      "\u001b[91m[ERROR] [17:34:33.688146] - Couldn't load config for other 'HuskyJointController'\u001b[0m\n",
+      "\u001b[92m\u001b[1m[OK] [17:34:33.689719] - setup publisher Husky/joint_group_command/sim[joint_group_command_t]\u001b[0m\n",
+      "\u001b[92m\u001b[1m[OK] [17:34:33.691384] - setup publisher Husky/cartesian_command/sim[task_space_command_t]\u001b[0m\n",
+      "\u001b[92m\u001b[1m[OK] [17:34:33.693991] - subscribed to Husky/joint_states/sim[joint_state_t]\u001b[0m\n"
      ]
     },
     {
@@ -72,62 +72,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "d86ec1f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "joint_command = [-1, 0.1, 0.3, -1.4, 1]\n",
-    "# Position Control\n",
-    "controller.joint_group_command.publish(pack.joint_group_command(joint_command, \"all\"))"
+    "# FORWARDS\n",
+    "joint_command = [5, 5, 5, 5] # front left, front right, back left, back right\n",
+    "# Velocity Control\n",
+    "controller.joint_group_command.publish(pack.joint_group_command(joint_command, \"wheels\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "df953d1a",
+   "execution_count": 14,
+   "id": "299c70cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arm_command = [-2, -1, 1.1, -0.6, 0.2]\n",
-    "# Position Control \n",
-    "controller.joint_group_command.publish(pack.joint_group_command(arm_command, \"arm\"))"
+    "# BACKWARDS\n",
+    "joint_command = [-5, -5, -5, -5] # front left, front right, back left, back right\n",
+    "# Velocity Control\n",
+    "controller.joint_group_command.publish(pack.joint_group_command(joint_command, \"wheels\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "112ae146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STOP\n",
+    "joint_command = [0, 0, 0, 0] # front left, front right, back left, back right\n",
+    "# Velocity Control\n",
+    "controller.joint_group_command.publish(pack.joint_group_command(joint_command, \"wheels\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "7e0a44fc",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd5a9751",
-   "metadata": {},
-   "source": [
-    "# Task Space Control"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "1187b61d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xyz_command = np.array([0.3, 0.4, 0.8])\n",
-    "quaternion_command = np.array([1, 0.0, 0.0, 0.0]) # xyz-w\n",
-    "\n",
-    "controller.task_space_command.publish(\n",
-    "    pack.task_space_command(\"all\", xyz_command, quaternion_command)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78576f7b",
    "metadata": {},
    "source": [
     "---"
@@ -143,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "75d0155f",
    "metadata": {},
    "outputs": [
@@ -151,20 +135,16 @@
      "data": {
       "text/plain": [
        "({'seq': 0, 'stamp': {'sec': 0, 'nsec': 0}, 'frame_id': ''},\n",
-       " ['husky_arm_0_joint',\n",
-       "  'husky_arm_1_joint',\n",
-       "  'husky_arm_2_joint',\n",
-       "  'husky_arm_3_joint',\n",
-       "  'husky_arm_4_joint',\n",
-       "  'husky_arm_5_joint',\n",
-       "  'husky_arm_6_joint'],\n",
-       " array([ 0.94613295, -0.31543036, -0.08368051,  1.25144731,  0.02817042,\n",
-       "        -1.57956562,  2.96705973]),\n",
-       " array([0., 0., 0., 0., 0., 0., 0.]),\n",
-       " array([0., 0., 0., 0., 0., 0., 0.]))"
+       " ['front_left_wheel',\n",
+       "  'front_right_wheel',\n",
+       "  'rear_left_wheel',\n",
+       "  'rear_right_wheel'],\n",
+       " array([-0.95493975,  0.6826147 ,  7.97192306, -9.61348529]),\n",
+       " array([0., 0., 0., 0.]),\n",
+       " array([0., 0., 0., 0.]))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
